--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@adonisjs/lucid": "^21.3.0",
     "@adonisjs/session": "^7.5.0",
     "@vinejs/vine": "^2.1.0",
+    "argon2": "^0.41.1",
+    "axios": "^1.7.8",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2"
